kubernetes/infra/components/envoy-gateway-system/configs/base/http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  annotations:
    external-dns.alpha.kubernetes.io/controller: "exclude"
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
      sectionName: http
    - name: sso-eg
      namespace: envoy-gateway-system
      sectionName: http
    - name: public-eg
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - "*.${HOMELAB_INTERNAL_SUBDOMAIN}"
    - "*.${HOMELAB_DOMAIN}"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
